@@ -89,6 +89,16 @@
     <div id="right">
         <div id="news">
 	    <h2 class="">News</h2>
+	    <h3>November 22, 2008</h3>
+	      <b>Stable</b> version 2.24.2 released.<br />
+	      <ul>
+		  <li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=557570">#557570</a>, Crash when proxy port changed</li>
+		  <li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=558700">#558700</a>, the yahoo url listed are duplicated</li>
+		  <li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=559169">#559169</a>, gnome power manager has new dbus path, this breaks some code in gdmaction module</li>
+		  <li>Work around bug <a href="http://bugzilla.gnome.org/show_bug.cgi?id=552204">#552204</a> and ignore rows where match is None</li>
+		  </ul>
+		  <a href="download.html">Download it</a>
+	
 	    <h3>November 03, 2008</h3>
 	      <b>Unstable</b> version 2.25.1 released.<br />
 			In this release all gnomevfs calls have been ported
